@@ -4,6 +4,8 @@ Fri Apr  1 00:14:58 EST 2005
 
 	Fix ^X ^S bug (was using vsdup() on a non-dynamic string).
 
+	Add autoscrolling (when mouse goes past window edge).
+
 Wed Mar 30 23:47:00 EST 2005
 
 	New xterm-patch fixes i18n problems with mouse.
